# web_setup_automation

./: .gitignore  MAKEFILE  README.md  app.py  aws_config.json  build_automation.py  content_to_json.py  credentials.json  dp_batch_bot.py  dp_bot.py  dp_bot_manager.py  dp_bot_set_online.py  eg.json  faq_progress.pkl  google_docs_text_extraction.py  main.py  main_launcher.py  parse.py  pyproject.toml  size.csv  te.json  temp.json  test_gdocs.py  test_numpy_import.py  test_numpy_import.spec  web_app.py  web_setup_automation.spec
cache/: faq_progress.pkl  online_progress.pkl  upload_replace_progress.pkl
hooks/: hook-numpy.py
json_templates/: mockup_landing.json  mockup_tool.json  mockup_universal_topic.json  tools.json
landing_page_adjust/: lpa.py
miscellaneous/: batch_replace_placeholders.py  batch_toggle_faq_translatability.py  dp_batch_bot.py  dp_batch_bot_landing.py  dp_batch_toggle_faq_translatability.py  json_similarity_detector.py  placeholder_image.py  web_ui_xpath.json
miscelleaneous/: json_similarity_detector.py  placeholder_image.py
pages/: automation.py
resources/: icon.icns
template/: 24_model.json  8_model.json  content_step.json  dieline_20_model.json  dieline_8_model.json  dieline_resource.json  dieline_resource_h1.json  dieline_tool.json  end.json  faq.json  feature.json  feature_part.json  landing.json  landing_feature.json  landing_more_description.json  landing_step.json  mockup_content.json  mockup_content_h1.json  mockup_resource.json  mockup_tool.json  mockup_tools_h1.json  more_description.json  part.json  resource_h1.json  step.json  tools.csv  tools_2.json  tools_3.json  tools_3_part.json  (+1 more)
(+37 files in other folders)
