[project]
name = "wsa"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydrive2>=1.21.3",
    "pyinstaller>=6.14.0",
    "pyside6>=6.9.1",
    "qt-material>=2.17",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
