[project]
name = "wsa"
version = "0.7.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awscli>=1.40.35",
    "boto3>=1.38.36",
    "drissionpage>=4.1.1.2",
    "helium>=5.1.1",
    "keyring>=25.6.0",
    "openai>=1.99.6",
    "pillow>=11.3.0",
    "pyinstaller>=6.14.0",
    "pyperclip>=1.9.0",
    "pyside6>=6.9.1",
    "qt-material>=2.17",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "seleniumbase>=4.40.8",
    "simplellmfunc>=0.2.13",
    "webdriver-manager>=4.0.2",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
